samples/_failures_safe/1761348507_dceff0_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_9d012282.c: In function ‘main’:
./samples/SAFE/__tmp_9d012282.c:181:9: error: expected declaration or statement at end of input
  181 |         fprintf(stderr, "Error reading input\n");
      |         ^~~~~~~
./samples/SAFE/__tmp_9d012282.c:181:9: error: expected declaration or statement at end of input
